apps/app-clinica/overlays/dev/patches/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dev
    external-dns.alpha.kubernetes.io/hostname: app-clinica.dominio.com.br
spec:
  rules:
    - host: app-clinica.dominio.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-clinica
                port:
                  number: 80
  tls:
    - hosts:
        - app-clinica.dominio.com.br
      secretName: app-clinica-letsencrypt-secret
